# Ejercicio-Programacion-Estructurada

./: CMakeLists.txt  README.md  main.c  main.h
estudiante/: estudiante.c  estudiante.h
lista/: lista.c  lista.h
